<resources>
    <string name="wishwash">WishWash</string>
    <string name="slogan">Wash Whenever You Wish</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email here</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="password_hint">Enter your password here</string>
    <string name="new_password_hint">Enter your new password here</string>
    <string name="back">Back</string>
    <string name="re_enter_password">Re-enter new password</string>
    <string name="re_enter_password_hint">Re-enter your new password here</string>
    <string name="calendar">Calendar</string>
    <string name="bookings">Bookings</string>
    <string name="chat">Chat</string>
    <string name="tips">Tips</string>
    <string name="ok">OK</string>
    <string name="choose_date_calendar">Choose your date</string>

    <string-array name="times">
        <item>06–08</item>
        <item>08–10</item>
        <item>10–12</item>
        <item>12–14</item>
        <item>14–16</item>
        <item>16–18</item>
        <item>18–20</item>
    </string-array>

    <string-array name="washing_machines">
        <item>WM1</item>
        <item>WM2</item>
        <item>WM3</item>
    </string-array>


</resources>
