<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".Fragments.SignUpFragment">

    <Button
        android:id="@+id/Button_signupFragment_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10sp"
        android:paddingHorizontal="40dp"
        android:text="@string/back"
        android:background="@drawable/button_border_login"
        android:textColor="@color/colorRed"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/Button_signupFragment_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="10sp"
        android:paddingHorizontal="40dp"
        android:text="@string/signup"
        android:background="@drawable/button_border_login"
        android:textColor="@color/colorRed"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/EditText_signupFragment_passwordReenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_signupFragment_passwordReenterTitle"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/re_enter_password_hint"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/EditText_signupFragment_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_signupFragment_emailTitle"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/email_hint"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/EditText_signupFragment_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_signupFragment_passwordTitle"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:hint="@string/new_password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/TextView_signupFragment_passwordReenterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_signupFragment_password"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/re_enter_password"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TextView_signupFragment_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TextView_signupFragment_passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/EditText_signupFragment_email"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/new_password"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TextView_signupFragment_emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_signupFragment_signup"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textSize="15sp"
        android:textStyle="bold"/>

</RelativeLayout>