<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SignInFragment"
    android:background="@color/colorTurquoise">

    <TextView
        android:id="@+id/TextView_signinFragment_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/TextView_signinFragment_emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@+id/TextView_signinFragment_signin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <EditText
        android:id="@+id/EditText_signinFragment_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:backgroundTint="@color/colorBlack"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/TextView_signinFragment_emailTitle"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/TextView_signinFragment_passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@+id/EditText_signinFragment_email"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp" />

    <EditText
        android:id="@+id/EditText_signinFragment_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:backgroundTint="@color/colorBlack"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/TextView_signinFragment_passwordTitle"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        />

    <Button
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:id="@+id/Button_signinFragment_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10sp"
        android:paddingHorizontal="40dp"
        android:text="@string/back"
        android:textColor="@color/colorTurquoise"
        android:textStyle="bold"
        app:strokeColor="@color/colorBlack"
        app:strokeWidth="25dp"
        android:background="@drawable/button_border"
        />

    <Button
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:id="@+id/Button_signinFragment_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:paddingHorizontal="40dp"
        android:textColor="@color/colorTurquoise"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="21dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:background="@drawable/button_border"/>

</RelativeLayout>